--- a/rwd/practica-1/blog-any.html
+++ b/rwd/practica-1/blog-any.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-with, initial-scale=1">
 		<title>Nombre del Blog</title>
-		<link rel="stylesheet" type="text/css" href="styles.css">
+		<link rel="stylesheet" type="text/css" href="css/styles.css">
 	</head>
 	<body>
 		<div class="header">
