Se mejoró el menu

--- a/rwd/practica-1/blog-any.html
+++ b/rwd/practica-1/blog-any.html
@@ -23,7 +23,7 @@
                 <ul class="menu-bar bar">
                     <li class="menu-display"><a href="#" id="display"><i class="fa fa-bars"></a></i>
                 </ul>
-                <ul class="nav-bar bar">
+                <ul class="nav-bar bar toggle-off">
                     <li><a href="#">Inicio</a></li>
                     <li><a href="#">¿Quien soy?</a></li>
                     <li><a href="#">Proyectos</a></li>
